--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -8,12 +8,12 @@
     ":semanticCommits",
     ":automergeDigest",
     ":automergeBranch",
-    "github>dmcavinue/home-ops//.github/renovate/allowedVersions.json5",
-    "github>dmcavinue/home-ops//.github/renovate/autoMerge.json5",
-    "github>dmcavinue/home-ops//.github/renovate/commitMessage.json5",
-    "github>dmcavinue/home-ops//.github/renovate/groups.json5",
-    "github>dmcavinue/home-ops//.github/renovate/labels.json5",
-    "github>dmcavinue/home-ops//.github/renovate/semanticCommits.json5",
+    "github>dmcavinue/home-infra/.github/renovate/allowedVersions.json5",
+    "github>dmcavinue/home-infra/.github/renovate/autoMerge.json5",
+    "github>dmcavinue/home-infra/.github/renovate/commitMessage.json5",
+    "github>dmcavinue/home-infra/.github/renovate/groups.json5",
+    "github>dmcavinue/home-infra/.github/renovate/labels.json5",
+    "github>dmcavinue/home-infra/.github/renovate/semanticCommits.json5",
     "helpers:pinGitHubActionDigests"
   ],
   "platform": "github",
