--- a/ansible/kubernetes/inventory/group_vars/all/main.yaml
+++ b/ansible/kubernetes/inventory/group_vars/all/main.yaml
@@ -19,4 +19,5 @@ k3s_server_manifests_templates:
   - custom-cilium-helmchart.yaml.j2
   - custom-cilium-l2.yaml.j2
   - custom-coredns-helmchart.yaml.j2
+  - custom-externalsecrets-helmchart.yaml.j2
 # /var/lib/rancher/k3s/agent/pod-manifests
