--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
+# kubernetes
 DOMAIN=example.com
 VIP_IP="192.168.0.100"
+
+# vault
+VAULT_ADDR="https://vault.example.com"
+VAULT_TOKEN="xxxxxxxx"
+VAULT_UNSEAL_KEY_1="xxxxxxxx"
+VAULT_UNSEAL_KEY_2="xxxxxxxx"
+VAULT_UNSEAL_KEY_3="xxxxxxxx"
