add vault shared secrets

--- a/.taskfiles/ansible.yaml
+++ b/.taskfiles/ansible.yaml
@@ -3,7 +3,7 @@ version: '3'
 
 env:
   ANSIBLE_CONFIG: "{{.ANSIBLE_DIR}}/ansible.cfg"
-  KUBECONFIG: "{{.PROJECT_DIR}}/{{.ENVIRONMENT}}.kubeconfig"
+  KUBECONFIG: "{{.ROOT_DIR}}/{{.ENVIRONMENT}}.kubeconfig"
 
 vars:
   ANSIBLE_PLAYBOOK_DIR: "{{.ANSIBLE_DIR}}/kubernetes/playbooks"
