--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ VAULT_TOKEN="xxxxxxxx"
 VAULT_UNSEAL_KEY_1="xxxxxxxx"
 VAULT_UNSEAL_KEY_2="xxxxxxxx"
 VAULT_UNSEAL_KEY_3="xxxxxxxx"
+
+# cloudflare
+CLOUDFLARE_EMAIL="dan@example.com"
+CLOUDFLARE_TOKEN="xxxxxxxx"
