--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ VAULT_UNSEAL_KEY_3="xxxxxxxx"
 # cloudflare
 CLOUDFLARE_EMAIL="dan@example.com"
 CLOUDFLARE_TOKEN="xxxxxxxx"
+
+# flux
+FLUX_GITHUB_DEPLOY_KEY="xxxxxxxx"
+FLUX_GITHUB_KNOWN_HOSTS="xxxxxxxx"
+FLUX_SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
