revert crd install method cleanup vault tasks

--- a/.taskfiles/ansible.yaml
+++ b/.taskfiles/ansible.yaml
@@ -36,6 +36,7 @@ tasks:
     deps: [prepare]
     cmds:
       - "ansible-playbook -i {{.ANSIBLE_HOSTS_FILE}} {{.ANSIBLE_PLAYBOOK_DIR}}/cluster-installation.yaml -b"
+      - "task kubernetes:install-crds"
     silent: true
 
   reset:
