--- a/ansible/kubernetes/inventory/group_vars/all/main.yaml
+++ b/ansible/kubernetes/inventory/group_vars/all/main.yaml
@@ -10,3 +10,12 @@ k3s_server_manifests_templates:
   - custom-cilium-l2.yaml.j2
   - custom-coredns-helmchart.yaml.j2
   - custom-external-secrets-helmchart.yaml.j2
+# /var/lib/rancher/k3s/server/manifests
+k3s_server_manifests_urls:
+  # Essential Prometheus Operator CRDs (the rest are installed with the kube-prometheus-stack helm release)
+  - url: https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.66.0/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
+    filename: custom-prometheus-podmonitors.yaml
+  - url: https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.66.0/example/prometheus-operator-crd/monitoring.coreos.com_prometheusrules.yaml
+    filename: custom-prometheus-prometheusrules.yaml
+  - url: https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.66.0/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
+    filename: custom-prometheus-servicemonitors.yaml
