--- a/kubernetes/bootstrap/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/sharedsecrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: shared-secrets
+  name: cluster-secrets
   namespace: flux-system
 spec:
   refreshInterval: "30m"
@@ -10,7 +10,7 @@ spec:
     name: vault-kv-backend
     kind: SecretStore
   target:
-    name: shared-secrets
+    name: cluster-secrets
     template:
       type: Opaque
       engineVersion: v2
