--- a/kubernetes/flux/apps.yaml
+++ b/kubernetes/flux/apps.yaml
@@ -14,9 +14,9 @@ spec:
   postBuild:
     substituteFrom:
       - kind: ConfigMap
-        name: shared-settings
+        name: cluster-settings
       - kind: Secret
-        name: shared-secrets
+        name: cluster-secrets
   patches:
     - patch: |-
         apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -27,9 +27,9 @@ spec:
           postBuild:
             substituteFrom:
               - kind: ConfigMap
-                name: shared-settings
+                name: cluster-settings
               - kind: Secret
-                name: shared-secrets
+                name: cluster-secrets
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
