fix clusterissuer secret ref

--- a/kubernetes/bootstrap/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/sharedsecrets.yaml
@@ -15,11 +15,10 @@ spec:
       type: Opaque
       engineVersion: v2
       data:
+        CLOUDFLARE_EMAIL: "{{.CLOUDFLARE_EMAIL}}"
+        DOCKER_PRIVATE_REGISTRY: "{{.DOCKER_PRIVATE_REGISTRY}}"
         DOMAIN: "{{.DOMAIN}}"
         LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
-        DOCKER_PRIVATE_REGISTRY: "{{.DOCKER_PRIVATE_REGISTRY}}"
-        NFS_SERVER_IP: "{{.NFS_SERVER_IP}}"
-        SERVER_CIDR: "{{.SERVER_CIDR}}"
   dataFrom:
     - extract:
         key: /cluster/k8s
